--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "converts from metric to imperial measurements",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "NODE_ENV=test nodemon server.js",
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
