--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"test": "NODE_ENV=test nodemon server.js",
+		"test": "NODE_ENV=test nodemon server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
